# eventpix_web

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  compose.yml  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  deploy.yml
backend/: .dockerignore  CONTRIBUTING.md  Dockerfile  pyproject.toml
backend/sample/: sample_image.json
backend/src/eventpix/: app.py  content.txt  content2.txt  event_extracter.py  image2text.py  sample_image.json  test_image2text.py
backend/tests/: conftest.py  test_app.py  test_event_extracter.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: page.tsx
frontend/src/app/fix/: page.tsx
sample/: sample_image.txt
src/eventpix/: app.py  event.py  event_extracter.py  image2text.py  pdf2text.py
src/eventpix/sample/: sample.ics
src/eventpix/static/css/: base.css  index.css  upload.css
src/eventpix/static/js/: index.js  main.js
src/eventpix/templates/: base.html  contact.html  index.html  result.html  upload.html
tests/: conftest.py  test_app.py  test_event_extracter.py
