[project]
name = "eventpix"
version = "0.1.0"
description = "No calendar no life"
authors = [
    { name = "take0x" }
]
dependencies = [
    "flask>=3.0.3",
    "flask-cors>=4.0.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
eventpix = "eventpix.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "mypy>=1.10.0",
    "ruff>=0.4.8",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/eventpix"]

[tool.mypy]
strict = true
