[project]
name = "eventpix"
version = "0.1.0"
description = "No calendar no life"
authors = [{ name = "take0x" }]
dependencies = [
    "flask>=3.0.3",
    "flask-cors>=4.0.1",
    "openai>=1.35.4",
    "datetime>=5.5",
    "icalendar>=5.0.13",
    "python-dotenv>=1.0.1",
    "google-cloud-vision>=3.7.2",
    "pillow-heif>=0.16.0",
    "pillow>=10.3.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
eventpix = "eventpix.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "mypy>=1.10.0",
    "ruff>=0.4.8",
    "types-flask-cors>=4.0.0.20240523",
    "pytest>=8.2.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/eventpix"]

[tool.mypy]
strict = true
